--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
         <a href="">header link two</a>
         <a href="">header link three</a>
     </div>
+    <div class="main-body-1">
+        <p>This website is awesome</p> 
+        <p>this website has some subtext that goes here under the main title. it's a smaller font and the color is lower contrast</p>
+        <button type="button"Sign up></button>
+        <img src="images/pexels-maceiras-2467558.jpg" alt="Picture of hotel">
+    </div>
 </body>
 </html>
