added main-body-2 to index.html

--- a/index.html
+++ b/index.html
@@ -18,5 +18,16 @@
         <button type="button"Sign up></button>
         <img src="images/pexels-maceiras-2467558.jpg" alt="Picture of hotel">
     </div>
+    <div class="main-body-2">
+        <p>Some random information</p>
+        <img src="" alt="placeholder">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <p>this is some subtext under an image</p>
+        <p>this is some subtext under an image</p>
+        <p>this is some subtext under an image</p>
+        <p>this is some subtext under an image</p>
+    </div>
 </body>
 </html>
