--- a/index.html
+++ b/index.html
@@ -29,5 +29,9 @@
         <p>this is some subtext under an image</p>
         <p>this is some subtext under an image</p>
     </div>
+    <div class="main-body-3">
+        <p>this is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who know? All I know is that it looks nice.</p>
+        <p>-Thor, God of Thunder</p>
+    </div>
 </body>
 </html>
