added footer to index.html

--- a/index.html
+++ b/index.html
@@ -40,5 +40,8 @@
             <button type="button">Sign up</button>
         </div>
     </div>
+    <div class="Footer">
+        <p>Copyright The Odin Project 2024</p>
+    </div>
 </body>
 </html>
