--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="Header">
         <img class="Header-logo" src="images/odin-lined.png" alt="The Odin Logo">
-        <a href="">header link one</a>
-        <a href="">header link two</a>
-        <a href="">header link three</a>
+        <div class="Header-link">
+            <a href="">header link one</a>
+            <a href="">header link two</a>
+            <a href="">header link three</a>
+        </div>
     </div>
     <div class="main-body-1">
         <p>This website is awesome</p> 
